# wirewatch

./: CMakeLists.txt  Dockerfile  README.md  cppcheck_report.txt
.github/workflows/: dev-build.yml  release.yml
include/: commands.h  netstuff.h  pretty.h
src/: commands.c  netstuff.c  pretty.c  wirewatch.c
